Add styling to personal website

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <img src="https://scontent-atl3-1.xx.fbcdn.net/v/t1.0-1/p160x160/13342886_10101276388369454_1487450881463343858_n.jpg?oh=fef093c6c8fe8fd0bf0f8d35ba0a3e9c&oe=587C98FA">
@@ -8,6 +9,6 @@
         <p> Math Teacher Extraordinaire, and Hack Club Sponsor
         <p>
             
-        </p>Let's be honest... I'll do just about anything for food!</p>
+        </p>Let's be honest... I'll do just about anything for food!</ p>
     </body>
 </html>
