--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <img src="https://scontent-atl3-1.xx.fbcdn.net/v/t1.0-1/p160x160/13342886_10101276388369454_1487450881463343858_n.jpg?oh=fef093c6c8fe8fd0bf0f8d35ba0a3e9c&oe=587C98FA">
-        <h1>Anne Hill</h1>
+        <h1 style="color pink">Anne Hill</h1>
         <p> Math Teacher Extraordinaire, and Hack Club Sponsor
         <p>
             
