Create that was easy button

--- a/that_was_easy/index.html
+++ b/that_was_easy/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>That Was Easy</title>
-        <link href="styles.css" rel=stylesheet">
+        <link rel=stylesheet" href="styles.css"/>
     </head>
     <body> 
         <button id="easy">Easy</button>
